<?xml version="1.0"?>
<package format="2">
  <name>mach1_bringup</name>
  <version>1.0.0</version>
  <description>The mach1_bringup package which configures and sets up mach1 robot.</description>
  <maintainer email="julianrendon514@gmail.com">Julian Rendon</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
